syntax = "proto3";
package assets.transactions.mutate;

import "gogoproto/gogo.proto";

message TransactionRequest {
  option (gogoproto.goproto_getters) = false;

  string from = 1;
  string from_i_d = 2;
  string asset_i_d = 3;
  string mutable_meta_properties = 4;
  string mutable_properties = 5;
}